terraform/aws-web-server-vpc/PublicSubnetAssociation.tf
resource "aws_route_table_association" "public_subnet_association" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.my_rt.id
}
