terraform/aws-web-server-vpc/VpcCreate.tf
#resource "aws_vpc" "my_vpc" {
#  cidr_block = var.vpc_cidr
 
#  tags = {
#    Name = "my_vpc"
#  }
#}

################################
#enable_dns_support = true
#enable_dns_hostnames = true
