terraform/aws-web-server-vpc/main.tf
resource "aws_vpc" "my_vpc" {
  cidr_block = var.vpc_cidr
 
  tags = {
    Name = "my_vpc"
  }
}
